[gd_scene load_steps=17 format=3 uid="uid://ft76cibe5g8g"]

[ext_resource type="Script" path="res://WorldMap/Scripts/Game.gd" id="1_2txqc"]
[ext_resource type="Script" path="res://WorldMap/Scripts/Camera.gd" id="2_3bt2u"]
[ext_resource type="PackedScene" uid="uid://4ycrxi3higj1" path="res://WorldMap/Objects/MapLocation.tscn" id="2_kn4ug"]
[ext_resource type="Script" path="res://WorldMap/Scripts/Locations.gd" id="2_rkm57"]
[ext_resource type="PackedScene" uid="uid://bivt1yg7m65v3" path="res://WorldMap/Objects/MapPath.tscn" id="3_3eirm"]
[ext_resource type="Resource" uid="uid://c801gu7obwjly" path="res://WorldMap/Resources/WorldMap.tres" id="3_t32oe"]
[ext_resource type="PackedScene" uid="uid://ddglejyu32vu8" path="res://WorldMap/Objects/Dice.tscn" id="3_xb648"]
[ext_resource type="Script" path="res://WorldMap/Scripts/Players.gd" id="5_d7llj"]
[ext_resource type="PackedScene" uid="uid://c1ubmr4ywp4y2" path="res://WorldMap/Objects/Player.tscn" id="6_3dsmr"]
[ext_resource type="FontFile" uid="uid://cpgxxmcq0um5o" path="res://Assets/Fonts/Rubik-Bold.ttf" id="9_732j5"]
[ext_resource type="Script" path="res://WorldMap/Scripts/UILayer.gd" id="9_cmpow"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j2eje"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="BoxMesh_6wh56"]
size = Vector3(30, 1, 30)

[sub_resource type="LabelSettings" id="LabelSettings_b0dgw"]
font = ExtResource("9_732j5")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_h3gpw"]
font = ExtResource("9_732j5")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_e27g3"]
font = ExtResource("9_732j5")
font_size = 24

[node name="Game" type="Node3D"]
script = ExtResource("1_2txqc")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.170622, 0.985337, 0, -0.985337, 0.170622, 0, 6.63909, 0.692081)
current = true
script = ExtResource("2_3bt2u")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]

[node name="Dice" parent="." instance=ExtResource("3_xb648")]

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_j2eje")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_6wh56")

[node name="Locations" type="Node3D" parent="."]
script = ExtResource("2_rkm57")
MapLocation = ExtResource("2_kn4ug")
MapPath = ExtResource("3_3eirm")
WorldMap = ExtResource("3_t32oe")

[node name="Players" type="Node3D" parent="."]
script = ExtResource("5_d7llj")
Player = ExtResource("6_3dsmr")

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource("9_cmpow")

[node name="Coins" type="Label" parent="UILayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Coins: 0"
label_settings = SubResource("LabelSettings_b0dgw")

[node name="Panel" type="Panel" parent="UILayer"]
layout_direction = 2
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -324.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TurnLabel" type="Label" parent="UILayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Turn"

[node name="MoveLabel" type="Label" parent="UILayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Moves:"

[node name="LocationLabel" type="Label" parent="UILayer/Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_h3gpw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="UILayer/Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_e27g3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="UILayer/Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("9_732j5")
text = "End Turn"

[node name="Timer" type="Timer" parent="."]
one_shot = true
